Release 2.4.1 - ???

   * Allow continuation of parsing after write limit has
     been reached (TIKA-3787).

   * Allow pass-through of 'Content-Length' header to metadata
     in TikaResource (TIKA-3786).

   * Add embedded depth to profiles tables in tika-eval (TIKA-3775).

   * Add stop() method to TikaServerCli so that it can be run
     with Apache Commons Daemon (TIKA-1570).

   * Fixed bug in ordering of Parsers during service loading (TIKA-3750).

   * Users can expand system properties from the forking
     process into forked tika-server processes (TIKA-3748).

   * Fix a few files being wrongly detected as EML (TIKA-3771).

   * Fix ignoreCharsets param of Icu4jEncodingDetector (TIKA-3774).

Release 2.4.0 - 04/23/2022

   * NOTE: To save on resources, we no longer include the
     deeplearning4j dependencies in the tika-dl jar. The dependencies for the
     tika-dl package must be provided by users.  See:
     https://github.com/apache/tika/blob/main/tika-parsers/tika-parsers-ml/tika-dl/pom.xml
     for the dependencies that must be provided at run-time (TIKA-3676).

   * NOTE: Added prefix "dwg-custom:" to DWG custom metadata properties (TIKA-3731).

   * Add initial, BETA-grade TLS encryption option for tika-server;
     configuration may change in future releases (TIKA-3719).

   * Allow specification of fetcherName and fetchKey via query parameters
     in request URI in tika-server (TIKA-3714).

   * Add basic parsers for WARC and WACZ in tika-parsers-standard (TIKA-3697).

   * Add MetadataWriteFilter capability to improve memory profile in
     Metadata objects (TIKA-3695).

   * Allow configurability of the ContentHandlerDecorator used
     by the AutoDetectParser (TIKA-3723).

   * Allow configurability of the EmbeddedDocumentExtractor used
     by the AutoDetectParser (TIKA-3711).

   * Add detection for Frictionless Data packages and WACZ (TIKA-3696).

   * Add detection for DGN files with gratitude and credit