@@ -74,11 +74,11 @@ public interface TikaCoreProperties {
 
     //exception in an embedded file
     Property EMBEDDED_EXCEPTION =
-            Property.internalText(TIKA_META_EXCEPTION_PREFIX + "embedded_exception");
+            Property.internalTextBag(TIKA_META_EXCEPTION_PREFIX + "embedded_exception");
 
     //warning while parsing in an embedded file
     Property EMBEDDED_WARNING =
-            Property.internalText(TIKA_META_EXCEPTION_PREFIX + "embedded_warning");
+            Property.internalTextBag(TIKA_META_EXCEPTION_PREFIX + "embedded_warning");
 
     Property WRITE_LIMIT_REACHED =
             Property.internalBoolean(TIKA_META_EXCEPTION_PREFIX + "write_limit_reached");
